tests/instantiating/invalid/conflicting_order_of_groups_config/bus.fbd
main bus
	my_block block
		foo config
			groups = ["a", "b"]

		bar config
			groups = ["b", "a"]
